# wiki-live-de-python

./: 404.html  CNAME  README.md  index.html  lives.txt  lives_descriptions.txt  mkdocs.yml  pyproject.toml  references.txt  sitemap.xml  title.txt  videos_descriptions.txt
descriptions/: 20 anos da espetacular versão 2.2 do Python - Com João JS Bueno - Live de Python #194-94FQUHVU39s.description  API de CRUD com flask, sqlalchemy e marshmallow-WzaKIRJBGXo.description  Ambientes virtuais e instalação de bibliotecas - Live de Python #191-naGF7EIUFp0.description  Bate papo, criação de conteúdo e agradecimentos-XT6rlpvk6Y8.description  Biblioteca padrão #1 - collections.namedtuple-IkoaXbLsUg8.description  Como criar logs em Python - Live de Python #198 [Logging, Loguru, Sentry]-PGAOqAWuwC0.description  Como debugar código Python - Live de Python #197-yffiyHEiUvo.description  Como fazer bots para telegram com Pyrogram _ Live de Python #210-bO-ksqJNPXg.description  Como organizar um projeto Python - Live de Python #192-O3bs4JtHrow.description  Configurando o Atom para programar Python [2020]-3AqsJ5qV0U4.description  Configurando o Emacs #02 - Gerenciamento de pacotes (Melpa)-UYSrZETZtro.description  Configurando o Emacs #04 - Auto complete-c_ta3tVsFIQ.description  Configurando o Emacs #06 - Atalhos personalizados-dfRPDYFDPHY.description  Configurando o Emacs #08 - Teclado ergonômico com ergoemacs-NCgl2cZbj3Q.description  Configurando o Emacs #09 - temas-bm7DfAoywGs.description  Conhecendo CSS com Giordane Oliveira-2xa_g0g8SiE.description  (+153 more)
docs/: duvidas_discussoes.md  index.md  (+6 more)
(+101 files in other folders)
